# CCU_workspace

Database/HW5/: .gitignore  B_plus_tree.hpp  CMakeLists.txt  Declaration.hpp  Internal_Node.hpp  Leaf_Node.hpp  README.md  The_Algorithm_of_B_Plus_Tree.pptx  main.cpp  shell.hpp
Database/HW5/Img/: 1.1_Insert_the_first_data.drawio  1.1_Insert_the_first_data.drawio.emf  1.1_Insert_the_first_data.drawio.eps  1.2.1_Insert_the_second_data_find_data_leaf.drawio  1.2.1_Insert_the_second_data_find_data_leaf.drawio.emf  1.2.1_Insert_the_second_data_find_data_leaf.drawio.eps  1.2.2_Insert_the_second_data_insert_new_value.drawio  1.2.2_Insert_the_second_data_insert_new_value.drawio.emf  1.2.2_Insert_the_second_data_insert_new_value.drawio.eps  1.3.1_Leaf_overflow.drawio  1.3.1_Leaf_overflow.drawio.emf  1.3.1_Leaf_overflow.drawio.eps  1.3.2_Leaf_overflow_copy_up_key.drawio  1.3.2_Leaf_overflow_copy_up_key.drawio.emf  1.3.2_Leaf_overflow_copy_up_key.drawio.eps  1.3.3_Leaf_overflow_insertion_sort.drawio  1.3.3_Leaf_overflow_insertion_sort.drawio.emf  1.3.3_Leaf_overflow_insertion_sort.drawio.eps  1.4.1_Index_overflow.drawio  1.4.1_Index_overflow.drawio.emf  1.4.1_Index_overflow.drawio.eps  1.4.2_Index_overflow_new_internal_node.drawio  1.4.2_Index_overflow_new_internal_node.drawio.emf  1.4.2_Index_overflow_new_internal_node.drawio.eps  1.4.3_Index_overflow_new_root.drawio  1.4.3_Index_overflow_new_root.drawio.emf  1.4.3_Index_overflow_new_root.drawio.eps  1.5.1_Index_overflow_non_root.drawio  1.5.1_Index_overflow_non_root.drawio.emf  1.5.1_Index_overflow_non_root.drawio.eps  (+15 more)
(+1208 files in other folders)
